# rtcom-accounts-plugin-discord

data/: Makefile.am  discord-advanced.glade
debian/: changelog  control
src/: Makefile.am  discord-plugin.c
